# Stacato

./: .gitignore  .gitmodules  AnimatableConstraint.cpp  AnimatableConstraint.h  AnimatableParameterGui.cpp  CMakeLists.txt  Info.plist  README.md  VoltageControlledServoActuator.cpp  VoltageControlledServoActuator.hpp  generateprojects.bat  generateprojects.command  premake5.lua  xmlFile.xml
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/src/: glad.c
src/: CMakeLists.txt  UnitT.cpp  UnitT.h
src/Animation/: Animatable.cpp  Animatable.h  AnimatableOwner.h  Animation.cpp  Animation.h  AnimationComposite.cpp  AnimationConstraint.h  AnimationKey.cpp  AnimationValue.cpp  AnimationValue.h  Manoeuvre.cpp  Manoeuvre.h  ManoeuvreXML.cpp  ManualControlChannel.cpp  ManualControlChannel.h  ManualControlChannelGui.cpp  NewAnimatable.h  SequenceAnimation.cpp  TargetAnimation.cpp
src/Animation/Animatables/: AnimatableBoolean.cpp  AnimatableBoolean.h  AnimatablePosition.cpp  AnimatablePosition.h  AnimatablePositionGui.cpp  AnimatableReal.cpp  AnimatableReal.h  AnimatableState.cpp  AnimatableState.h  AnimatableVelocity.cpp  AnimatableVelocity.h  AnimatableVelocityGui.cpp
src/Animation/NewAnimation/: Animatable.cpp  Animatable.h  AnimatableOwner.cpp  AnimatableOwner.h  AnimatablePosition.h  AnimatableRegistry.cpp  AnimatableRegistry.h  AnimatableState.h  Animation.cpp  Animation.h  AnimationTypes.cpp  AnimationTypes.h  AnimationValue.h  Animations.h  Manoeuvre.cpp  Manoeuvre.h  ManoeuvreGui.cpp  PositionAnimatable.h  StateAnimatable.h
src/Animation/Playback/: Playback.cpp  Playback.h
src/Application/: Application.cpp  Application.h  Application_Private.h  Logger.h  Workspace.h
src/Application/Gui/: Gui.cpp  Gui_Private.h  Layout.cpp  Layout.h  Window.cpp  Window.h  WindowManager.cpp
src/Console/: Console.cpp  Console.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleHandlerGui.cpp  ConsoleIODevice.cpp  ConsoleIODevice.h  ConsoleMapping.cpp  ConsoleMapping.h  Serial.cpp  Serial.h
src/Console/Consoles/: ButtonBoard.cpp  ButtonBoard.h  ConsoleStarmania.cpp  ConsoleStarmania.h  ConsoleStarmaniaGui.cpp  StacatoCompact.cpp  StacatoCompact.h  StacatoCompactGui.cpp  (+3 more)
src/Core/: Info.plist  config.h.in  entry.cpp  pch.h  timing.cpp  timing.h
src/Environnement/: DeviceNode.cpp  DeviceNode.h  Environnement.cpp  Environnement.h  EnvironnementSaveFile.cpp  EnvironnementScript.cpp  EnvironnementScript.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  NodeGraph.cpp  NodeGraph.h  NodePin.cpp  Processing.cpp  SaveFile.cpp  StageVisualizer.cpp  StageVisualizer.h  Visualizer.cpp  nodeGraphXML.cpp
src/Fieldbus/: ECatServoDrive.cpp  ECatServoDrive.h  ECatUtilities.h  EipServoDrive.cpp  EipServoDrive.h  EtherCatDataTypes.cpp  EtherCatDataTypes.h  EtherCatDevice.cpp  EtherCatDevice.h  EtherCatDeviceIdentifier.cpp  EtherCatDeviceIdentifier.h  EtherCatFieldbus.cpp  EtherCatFieldbus.h  EtherCatMetrics.cpp  EtherCatMetrics.h  EtherCatPDO.h  EtherCatSlave.cpp  EtherCatSlave.h  EtherCatTest.cpp  EtherCatTest.h  EthernetIpTest.cpp  EthernetIpTest.h  Fsoe.cpp  FsoeConnection.cpp  FsoeConnection.h  StatusCodePrint.h
src/Gui/: CommandHistory.h  CommandZ.cpp  CommandZ.h  EnvironnementGui.cpp  EtherCatGui.cpp  EtherCatGui.h  EtherCatMetricsGui.cpp  EtherCatParametersGui.cpp  EtherCatSlavesGui.cpp  EthernetIpGui.cpp  EthernetIpGui.h  Gui.cpp  Gui.h  GuiWindow.cpp  GuiWindow.h  List.h  Log.cpp  MainWindow.cpp  MenuBar.cpp  NodeGraphGui.cpp  Parameter.h  ScrollingBuffer.h  Test.cpp  Test.h  Toolbar.cpp  sequencer.cpp
src/Legato/: Application.cpp  Application.h  Workspace.cpp  Workspace.h
src/Machine/: AnimatableParameter.cpp  AnimatableParameter.h  AnimatableParameterValue.cpp  AnimatableParameterValue.h  Machine.cpp  Machine.h
src/Motion/: AnimatableParameter.cpp  AnimatableParameter.h  Interfaces.h  MotionCurve.cpp  MotionCurve.h  MotionTypes.cpp  MotionTypes.h  ParameterSequence.cpp  ParameterSequence.h  ParameterTrack.cpp  ParameterTrack.h  Playback.cpp  Playback.h  Profile.h  SubDevice.cpp  SubDevice.h
src/Networking/: Network.cpp  Network.h  NetworkDevice.cpp  NetworkDevice.h  NetworkDevice.hpp  OscDevice.cpp  OscDevice.h  OscNode.cpp  OscNode.h  OscSocket.cpp  OscSocket.h
src/NodeGraph/: Device.cpp  Device.h  DeviceNode.h  Node.cpp  Node.h  NodeGraph.cpp  NodeGraph.h  NodeLink.h  NodePin.cpp  NodePin.h  Processing.cpp  ioData.cpp  ioData.h  ioNode.cpp  ioNode.h
src/Nodes/: EtherCatNodes.cpp  MotionNodes.cpp  NetworkNodes.cpp  NodeFactory.cpp  NodeFactory.h  ProcessorNodes.cpp
src/Plot/: Manoeuvre.cpp  Manoeuvre.h  ManoeuvreList.cpp  ManoeuvreList.h  ParameterSequence.cpp  ParameterSequence.h  Plot.cpp  Plot.h  PlotSaveFile.cpp  Sequencer.cpp  Sequencer.h  Transport.cpp
src/Project/: Component.cpp  Component.h  Environnement.cpp  Environnement.h  EnvironnmentSaveFile.cpp  Plot.cpp  Plot.h  PlotSaveFile.cpp  Project.cpp  Project.h  ProjectSaveFile.cpp  Serializable.h  Stacato.h  StacatoApplication.cpp  StacatoEditor.cpp  StacatoEditor.h  StacatoGui.cpp  StacatoProject.cpp  StacatoProject.h  StacatoWorkspace.cpp
src/Rendering/: ofApplet.cpp  ofApplet.h  ofRenderer.cpp  ofRenderer.h
src/Scripting/: ArtNetLibrary.cpp  ArtNetLibrary.h  CanvasLibrary.cpp  CanvasLibrary.h  EnvironnementLibrary.cpp  EnvironnementLibrary.h  LoggingLibrary.cpp  LoggingLibrary.h  LuaLibrary.h  LuaLibraryHelper.h  PsnLibrary.cpp  PsnLibrary.h  Script.cpp  Script.h
src/Stacato/: Stacato.h  StacatoApplication.cpp  StacatoApplication.h  StacatoEditor.cpp  StacatoEditor.h  StacatoGui.cpp  StacatoGui.h  StacatoPopups.h  StacatoProject.cpp  StacatoProject.h  StacatoRunner.cpp  StacatoRunner.h  StacatoWorkspace.cpp  StacatoWorkspace.h
src/Tests/: C_Curves.cpp  C_Curves.h  CommandZ.cpp  EsiReader.cpp  EsiReader.h
src/Utilities/: AsynchronousTask.h  CircularBuffer.h  Enumerator.h  Logger.cpp  Logger.h  ProgressIndicator.h  Random.cpp  Random.h  ScrollingBuffer.h  Timing.cpp  Timing.h  Units.cpp  Units.h
src/Visualizer/: Visualizer.cpp  Visualizer.h  ofRenderer.cpp  ofRenderer.h
(+667 files in other folders)
